<resources>
    <string name="app_name">Exec</string>
    <string name="login_lbl_email">E-mail</string>
    <string name="login_lbl_senha">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="login_lbl_novo">Não tem cadastro?</string>
    <string name="login_foto_cd">Foto do usuário</string>
    <string name="register_name">Nome</string>
    <string name="register_email">E-mail</string>
    <string name="register_tel">Telefone</string>
    <string name="register_senha">Senha</string>
    <string name="register_confir_senha">Confirmar Senha</string>
    <string name="btn_salvar">Salvar</string>
</resources>
